2001-02-19  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* scheduler/mailq.c:
	    When doing some slow  'mailq -vv', and using MAILQv2, do
	    query all data out of the scheduler before poking into
	    the files (which may be a lot).  Limit the time of inter-
	    action with the scheduler to the minumum.

2001-02-16  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* scheduler/readconfig.c:
	    One-off bug in ${ZENV} substitution code.

	* configure.in:
	    Derive  ZCONFIG  (formely defaulted to  /etc/zmailer.conf)
	    from  --prefix  !  The same way as --prefix derives $MAILSHARE.
	    Officially zmailer.conf's new location *is* $MAILSHARE.

2001-02-15  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* proto/cf/fqdnaliases.cf:
	    Moved the local-part (user) extraction up a bit so that
	    it can be given to the listaddresses as expansion parameter.

	* router/functions.c:
	    At  $(listaddresses ..) and $(listexpand ..)  functions,
	    support "%1@.." type substitutions with '-l' option.
	    I am now considering this *wrong* approach, and am doing
	    more sendmailish approach to %N substitutions.

	* router/functions.c, router/db.c, router/libsh/search.h:
	    Support up to 8-9 additional substitution options at the
	    database lookups.  At the moment is lacking the actual %N
	    substitution code!  WORK IN PROGRESS!

	* scheduler/mailq.c:
	    a bit of comments & one missing newline on error printouts.

2001-02-14  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* router/router.c:
	    Cut down logging/log printing a bit -- duplicated data
	    actually.

2001-02-13  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* proto/scheduler.conf.in, scheduler/readconfig.c:
	    Allow ${ZENV} substitutions in PARAM lines.
	    ("PARAMauthfile" and "PARAMmailqsock", to be exact.)

	* smtpserver/policytest.c:
	    Do Test-Rcpt-DNS-RBL also based on FULL userid lookup.
	    Allows some users to want the lookup, others not.
